--- a/u3-efcore-18100241/appsettings.json
+++ b/u3-efcore-18100241/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MusicBDConnection": "Server=.;Database=MusicBD;User=sa;Password=sa;MultipleActiveResultSets=true;"
+  }
 }
